--- a/mifOS/src/GUI/EmulatorFrame/EmulatorPane.form
+++ b/mifOS/src/GUI/EmulatorFrame/EmulatorPane.form
@@ -45,9 +45,9 @@
                                   <Component id="executeProgram" min="-2" max="-2" attributes="1"/>
                               </Group>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               <Component id="registerSFValue_4" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jSeparator2" min="-2" max="-2" attributes="0"/>
@@ -141,7 +141,7 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                       <Component id="showVMMemoryButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -264,30 +264,27 @@
                               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="jLabel11" pref="68" max="32767" attributes="1"/>
-                                      <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
-                                  </Group>
                                   <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jSeparator4" max="32767" attributes="1"/>
                                       <Component id="jSeparator3" max="32767" attributes="1"/>
                                       <Component id="jSeparator2" alignment="1" max="32767" attributes="1"/>
-                                      <Component id="registerSFValue_4" alignment="0" max="32767" attributes="1"/>
+                                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                                          <Component id="registerSFValue_4" alignment="3" max="32767" attributes="1"/>
+                                          <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="1"/>
+                                      </Group>
                                       <Component id="registerSFValue_3" alignment="0" max="32767" attributes="1"/>
                                       <Component id="registerSFValue_2" alignment="0" min="-2" max="-2" attributes="1"/>
                                   </Group>
                                   <Component id="registerSFValue_1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" attributes="0">
-                              <Component id="jScrollPane3" min="-2" pref="436" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="showVMMemoryButton" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jScrollPane3" min="-2" pref="436" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="showVMMemoryButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
