--- a/mifOS/src/GUI/VMMemoryFrame/VMMemoryFrame.form
+++ b/mifOS/src/GUI/VMMemoryFrame/VMMemoryFrame.form
@@ -49,15 +49,13 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="vmMemoryTable">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
-              </Table>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="this.memoryTableModel" type="code"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="try&#xa;{&#xa;    this.vmMemoryTable.setDefaultRenderer(Class.forName&#xa;        ( &quot;java.lang.String&quot; ), this.virtualMemoryTableCellRender);&#xa;&#xa;} catch(ClassNotFoundException e)&#xa;{&#xa;    System.exit( 0 );&#xa;}"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
